...
      return;
    }
    setPage(page + 1);
    fetchPostComments();
  };
  return (
    <View style={styles.container} testID='postCommentScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={postCommentList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
