...
      return;
    }
    setPage(page + 1);
    fetchPostLikes();
  };
  return (
    <View style={styles.container} testID='postLikeScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={postLikeList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
